@@ -80,7 +80,7 @@ function check_screen_recursion($mother_screenid, $child_screenid) {
 	return false;
 }
 
-function get_slideshow($slideshowid, $step, $effectiveperiod = null) {
+function get_slideshow($slideshowid, $step) {
 	$db_slides = DBfetch(DBselect(
 		'SELECT MIN(s.step) AS min_step,MAX(s.step) AS max_step'.
 		' FROM slides s'.
@@ -381,46 +381,6 @@ function check_dynamic_items($elid, $config = 0) {
 	return false;
 }
 
-function templated_screen($screenid) {
-	$result = false;
-
-	$db_sitems = DBSelect(
-		'SELECT si.resourceid,si.resourcetype'.
-		' FROM screens_items si'.
-		' WHERE si.screenid='.$_REQUEST['screenid']
-	);
-	while ($sitem = DBfetch($db_sitems)) {
-		if (in_array($sitem['resourcetype'], array(SCREEN_RESOURCE_DATA_OVERVIEW, SCREEN_RESOURCE_ACTIONS,
-			SCREEN_RESOURCE_EVENTS, SCREEN_RESOURCE_HOSTS_INFO, SCREEN_RESOURCE_MAP, SCREEN_RESOURCE_SCREEN,
-			SCREEN_RESOURCE_SERVER_INFO, SCREEN_RESOURCE_HOSTGROUP_TRIGGERS, SCREEN_RESOURCE_HOST_TRIGGERS,
-			SCREEN_RESOURCE_SYSTEM_STATUS, SCREEN_RESOURCE_TRIGGERS_INFO, SCREEN_RESOURCE_TRIGGERS_OVERVIEW))) {
-			$result = false;
-			break;
-		}
-		elseif ($sitem['resourcetype'] == SCREEN_RESOURCE_GRAPH) {
-			$tpl = API::Template()->get(array(
-				'graphids' => $sitem['resourceid'],
-				'output' => API_OUTPUT_SHORTEN,
-				'editable' => true
-			));
-			$tpl = reset($tpl);
-			$result = $tpl ? $tpl['templateid'] : false;
-			break;
-		}
-		elseif ($sitem['resourcetype'] == SCREEN_RESOURCE_SIMPLE_GRAPH) {
-			$tpl = API::Template()->get(array(
-				'itemids' => $sitem['resourceid'],
-				'output' => API_OUTPUT_SHORTEN,
-				'editable' => true
-			));
-			$tpl = reset($tpl);
-			$result = $tpl ? $tpl['templateid'] : false;
-			break;
-		}
-	}
-	return $result;
-}
-
 // editmode: 0 - view with actions, 1 - edit mode, 2 - view without any actions
 function get_screen($screen, $editmode, $effectiveperiod = null) {
 	if (is_null($effectiveperiod)) {
@@ -692,7 +652,9 @@ function get_screen($screen, $editmode, $effectiveperiod = null) {
 						if (isset($_REQUEST['stime'])) {
 							$timeline['usertime'] = date('YmdHis', zbxDateToTime($_REQUEST['stime']) + $timeline['period']);
 						}
-						$objData['loadSBox'] = 1;
+						if ($editmode == 0) {
+							$objData['loadSBox'] = 1;
+						}
 					}
 					$objData['src'] = $src;
 				}
@@ -766,7 +728,9 @@ function get_screen($screen, $editmode, $effectiveperiod = null) {
 					if (isset($_REQUEST['stime'])) {
 						$timeline['usertime'] = date('YmdHis', zbxDateToTime($_REQUEST['stime']) + $timeline['period']);
 					}
-					$objData['loadSBox'] = 1;
+					if ($editmode == 0) {
+						$objData['loadSBox'] = 1;
+					}
 				}
 
 				$objData['src'] = zbx_empty($resourceid) ? 'chart3.php?' : 'chart.php?itemid='.$resourceid.'&'.$url.'width='.$width.'&height='.$height;
@@ -1190,7 +1154,7 @@ function get_screen($screen, $editmode, $effectiveperiod = null) {
 					'selectScreenItems' => API_OUTPUT_EXTEND
 				));
 				$subScreen = reset($subScreens);
-				$item = array(get_screen($subScreen, 2, $effectiveperiod));
+				$item = array(get_screen($subScreen, ($editmode == 1 || $editmode == 2) ? 2 : 0, $effectiveperiod));
 				if ($editmode == 1) {
 					array_push($item, new CLink(_('Change'), $action));
 				}
